[tool.poetry]
name = "cosmosys"
version = "0.1.0"
description = "A flexible and customizable release management tool"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/hyperb1iss/cosmosys"
repository = "https://github.com/hyperb1iss/cosmosys"
keywords = ["release", "management", "deployment", "versioning"]

[tool.poetry.dependencies]
python = "^3.9"
typer = { extras = ["all"], version = "0.12.5" }
colorama = "^0.4.6"
toml = "^0.10.2"
gitpython = "^3.1.43"
semver = "^3.0.0"
pyyaml = "^6.0"
mashumaro = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pylint = "^3.3.0"

[tool.poetry.scripts]
cosmosys = "cosmosys.cli:main"
lint = "scripts.lint:run_lint"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
pylint = "^3.3.0"
ruff = "^0.6.6"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pylint.format]
max-line-length = "100"
